fix spacing on task cards that only have a title

--- a/web/ui-elements/task-card.css
+++ b/web/ui-elements/task-card.css
@@ -21,7 +21,7 @@
         font-weight: 600;
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
+        align-items: center;
         justify-content: space-between;
         gap: 0.5em;
         padding-bottom: 2px;
@@ -80,6 +80,10 @@
 .task:hover .small-icon {
     transition: opacity 0.1s ease-out;
     opacity: 1;
+}
+
+.task:has(:not(.status-container)) {
+    padding-bottom: 0.35em;
 }
 
 
